главная и вторая страница Седона
пожалуйста сильно не ругайте

--- a/index.html
+++ b/index.html
@@ -5,8 +5,131 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+      <header class=" main-header">
+  <nav class="navigation">
+  <ul class="navigation-list">
+  <li class="navigation-item">
+  <a class="navigation-link" href="#">Главная</a>
+  </li>
+  <li class="navigaation-item">
+      <a class="navigation-link" href="#"> О Седоне</a>
+  </li>
+  <li class="navigation-item">
+      <a class="navigation-link" href="#"> Гостиницы</a>
+  </li>
+  </ul>
+  <ul class="navigation-list">
+      <li class="navigation-item">
+      <a class="navigation-link" href="#"> <span class="visual-hidden">Поиск</span>
+      </a>
+      </li>
+      <li class="navigaation-item">
+          <a class="navigation-link" href="#"> <span class="visual-hidden">Избранное</span>
+           </a>
+      </li>
+      <li class="navigation-item">
+          <button type="submit"  id="want_here">Хочу сюда!</button>
+      </li>
+      </ul>
+  </nav>
+      </header>
+      <main class="main-index">
+   <h1 class="visual-hidden"> SEDONA
+   </h1>
+      <img class="logo" src="#" alt="sedon-logo">
+      <section class="definition">
+        </section>
+      <section>
+        <h2 class="visual-hidden">  Что такое SEDONA? </h2>
+          <b> class="visual-hidden" Определние Седона </b>
+           <h2> Cедона-небольшой городок в аризоне, заслуживающий большего! </h2>
+           <h3> Причины,по которым Седона круче,чем Гранд-Каньон</h3>
+           <span class="visual-hidden">Причны</span>
+      </section>
+      <section class=" true_city">
+        <h2 class="visual-hidden">  Настоящий городок </h2>
+          <h3>Настоящий<br>городок</h3>
+          <h4>Седона - не атракцион для <br>туристов , там течёт своя<br> жизнь
+          </h4>
+          <img src="#"  alt= "зелёный_дом " class=" green_house">
+      </section>
+      <section class="small_size">
+        <h2 class="visual-hidden">  Небольшая площадь </h2>
+          <h3>НЕБОЛЬШАЯ<br>ПЛОЩАДЬ</h3>
+          <h4> Все достопремечательности  находяься очень близко </h4>
+      </section>
+      <section class="nice_road">
+        <h2 class="visual-hidden">  Красива дорога  </h2>
+          <h3>КРАСИВАЯ<br>ДОРОГА </h3>
+          <h4> Ехать в Седону из Лас-Вегаса<br> совсем не скучно! </h4>
+      </section>
+      <section class="few people">
+        <h2 class="visual-hidden">  Мало туристов </h2>
+          <h3> МАЛО <br> ТУРИСТОВ</h3>
+          <h4> Большинстов едет в Гранд<br>Каньон и толпится там </h4>
+      </section>
+      <section class="davils_bridge">
+        <h2 class="visual-hidden">  Что такое SEDONA? </h2>
+          <img src="#" alt="красная_гора" class="red mountains">
+          <h3>там есть<br> мост дьявола </h3>
+          <h4>Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется
+          </h4>
+      </section>
+      <section class="hose">
+          <h2 class="visual-hidden"> дом</h2>
+          <img src="#" alt="иконка дома" class="icon_house">
+         <h3> Рекомендуем пожитьв настоящем мотеле,
+  всё как в кино!</h3>
+       </section>
+       <section class="food">
+        <h2 class="visual-hidden">  Еда </h2>
+          <img src="#"   alt="иконка_еды" class="icon_food">
+          <h3>ЕДА</h3>
+        <h4>  Всегда заказывайте
+  топовый фирменный бургер, вы не разочаруетесь!
+  </h4>
+      </section>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+      <section class="present">
+        <h2 class="visual-hidden">  Сувениры</h2>
+          <img src="#" alt="иконка_подарка " class="icon_present">
+          <h3> СУВЕНИРЫ</h3>
+        <h4>Не только китайского,
+          но и настоящего местного производства!</h4>
+      </section>
+      <section class="search-hotels">
+          <h2> Заинтересовались? </h2>
+          <h3>Укажите предполагаемые даты поездки<br>,и мы покажем вам лучшие предложения гостиниц в Седоне</h3>
+          <button type="submit" > ПОИСК ГОСТИНИЦЫ В СЕДОНЕ </button>
+      </section>
+      <section class="mailing"></section>
+      <h2> подпишитесь на расслыку </h2>
+      <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+     <input type="email"  placeholder="Ваш e-mail">
+     <button type="submit" class="subscripe">Подписаться</button>
+  </main>
+      <footer>
+          <section class="footer-social">
+              <ul class="footer-social-list">
+                <li class="footer-social-item">
+                  <a class="button" href="#">
+                    <span class="visually-hidden">ВКонтакте</span>
+                  </a>
+                </li>
+                <li class="footer-social-item">
+                  <a class="button" href="#">
+                    <span class="visually-hidden"> Телеграмм</span>
+                  </a>
+                </li>
+                <li class="footer-social-item">
+                  <a class="button" href="#">
+                    <span class="visually-hidden">Ютуб</span>
+                  </a>
+                </li>
+              </ul>
+              <a class="mobail-number" href="tel:+78128121212"> +7(812)812-12-12</a>
+          <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
+      </section>
+      </footer>
   </body>
-</html>
+  </html>
