графика для всех страниц

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
       <header class=" main-header">
+        <img src="картинки/логотип в начале.svg" alt="логотип" class="mini-logo">
   <nav class="navigation">
   <ul class="navigation-list">
   <li class="navigation-item">
@@ -36,54 +37,46 @@
       <main class="main-index">
    <h1 class="visual-hidden"> SEDONA
    </h1>
-      <img class="logo" src="#" alt="sedon-logo">
+      <img class="logo" src="картинки/welcome (1) (1).svg" alt="sedon-logo" width="458px" height="352px">
       <section class="definition">
         </section>
       <section>
-        <h2 class="visual-hidden">  Что такое SEDONA? </h2>
-          <b> class="visual-hidden" Определние Седона </b>
            <h2> Cедона-небольшой городок в аризоне, заслуживающий большего! </h2>
            <h3> Причины,по которым Седона круче,чем Гранд-Каньон</h3>
            <span class="visual-hidden">Причны</span>
       </section>
       <section class=" true_city">
-        <h2 class="visual-hidden">  Настоящий городок </h2>
           <h3>Настоящий<br>городок</h3>
           <h4>Седона - не атракцион для <br>туристов , там течёт своя<br> жизнь
           </h4>
-          <img src="#"  alt= "зелёный_дом " class=" green_house">
+          <img src="картинки/дом на фоне гор.jpg"  alt= "дом_на фоне_гор " class=" green_house">
       </section>
       <section class="small_size">
-        <h2 class="visual-hidden">  Небольшая площадь </h2>
           <h3>НЕБОЛЬШАЯ<br>ПЛОЩАДЬ</h3>
           <h4> Все достопремечательности  находяься очень близко </h4>
       </section>
       <section class="nice_road">
-        <h2 class="visual-hidden">  Красива дорога  </h2>
           <h3>КРАСИВАЯ<br>ДОРОГА </h3>
           <h4> Ехать в Седону из Лас-Вегаса<br> совсем не скучно! </h4>
       </section>
       <section class="few people">
-        <h2 class="visual-hidden">  Мало туристов </h2>
           <h3> МАЛО <br> ТУРИСТОВ</h3>
           <h4> Большинстов едет в Гранд<br>Каньон и толпится там </h4>
       </section>
       <section class="davils_bridge">
         <h2 class="visual-hidden">  Что такое SEDONA? </h2>
-          <img src="#" alt="красная_гора" class="red mountains">
+          <img src="картинки/Каньон.jpg" alt=" красный_Каньон" class="red kanion">
           <h3>там есть<br> мост дьявола </h3>
           <h4>Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется
           </h4>
       </section>
       <section class="hose">
-          <h2 class="visual-hidden"> дом</h2>
-          <img src="#" alt="иконка дома" class="icon_house">
+          <img src="картинки/Advantage-iconhouse (1).svg" alt="иконка дома" class="icon_house">
          <h3> Рекомендуем пожитьв настоящем мотеле,
   всё как в кино!</h3>
        </section>
        <section class="food">
-        <h2 class="visual-hidden">  Еда </h2>
-          <img src="#"   alt="иконка_еды" class="icon_food">
+          <img src="картинки/Advantage-iconfood (1).svg"   alt="иконка_еды" class="icon_food">
           <h3>ЕДА</h3>
         <h4>  Всегда заказывайте
   топовый фирменный бургер, вы не разочаруетесь!
@@ -91,8 +84,7 @@
       </section>
 
       <section class="present">
-        <h2 class="visual-hidden">  Сувениры</h2>
-          <img src="#" alt="иконка_подарка " class="icon_present">
+          <img src="картинки/Advantage-iconpresent (1).svg" alt="иконка_подарка " class="icon_present">
           <h3> СУВЕНИРЫ</h3>
         <h4>Не только китайского,
           но и настоящего местного производства!</h4>
