--- a/second-pahe.html
+++ b/second-pahe.html
@@ -37,7 +37,7 @@
         <section class="hoеels_Sedon">
          <img src="#" alt="горы на заднем фоне" class="mountain_on_back">
          <h1>Гостиницы Седона</h1>
-         <img src="#" alt="иконка_домика" class="icaon_of_house">
+         <img src="\homeдомик.svg" alt="иконка_домика" class="icaon_of_house">
          <h2> Гостиницы</h2>
          <div class="checkbox's" >
             <h3>Инфраструктура:</h3>
@@ -69,61 +69,58 @@
          <option value="Сначала дешёвые"> Сначала дешёвые </option>
          <option value="Сначала дорогие"> Сначала дорогие </option>
            </select>
-           <h3 class="visual-hidden">....</h3>
-            <img src="#" alt="1-icon">
-            <h3 class="visual-hidden">....</h3>
-            <img src="#" alt="2-icon">
-            <h3 class="visual-hidden">....</h3>
-            <img src="#" alt="3-icon">
+            <img src="картинки/Viewсписок (1).svg" alt="1-icon">
+            <img src="картинки/View (1) (1).svg" alt="2-icon">
+            <img src="картинки/Viewвид (1) (1).svg" alt="3-icon">
         </section>
         <section class="fist_hotel">
-        <img src="#" alt="горы_с_видом_ночного_неба">
+        <img src="картинки/горы с ночным фоном.jpg" alt="горы_с_видом_ночного_неба">
         <h2>Amara Resort & Spa</h2>
         <h3>Гостиница</h3>
         <h3>от 4000р</h3>
         <button type="submit">Подробнее</button>
         <button type="submit">В избранное</button>
         <button type="button">Рейтинг:8,5</button>
-        <img src="#" alt="star">
-        <img src="#" alt="star">
-        <img src="#" alt="star">
-        <img src="#" alt="star">
+        <img src="картинки/звёздочка.svg" alt="star">
+        <img src="картинки/звёздочка.svg" alt="star">
+        <img src="картинки/звёздочка.svg" alt="star">
+        <img src="картинки/звёздочка.svg" alt="star">
         </section>
         <section class="second_hotel">
-            <img src="#" alt="горы_с_видом_радуги">
+            <img src="картинки/горы с радугой.jpg" alt="горы_с_видом_радуги">
             <h2>Villas at Poco Diablo</h2>
             <h3>Гостиница</h3>
             <h3>от 5000р</h3>
             <button type="submit">Подробнее</button>
             <button type="submit">В избранное</button>
             <button type="button">Рейтинг:9,2</button>
-            <img src="#" alt="star">
-            <img src="#" alt="star">
-            <img src="#" alt="star">
-            <img src="#" alt="star">
+            <img src="картинки/звёздочка.svg" alt="star">
+            <img src="картинки/звёздочка.svg" alt="star">
+            <img src="картинки/звёздочка.svg" alt="star">
+            <img src="картинки/звёздочка.svg" alt="star">
             </section>
         <section class="third_hotel">
-            <img src="#" alt="горы_с_лесом">
+            <img src="картинки/дневные горы.jpg" alt="горы_день">
             <h2>Desert Quail Inn</h2>
             <h3>Гостиница</h3>
             <h3>от 2500р</h3>
             <button type="submit">Подробнее</button>
             <button type="submit">В избранное</button>
             <button type="button">Рейтинг:6,9</button>
-            <img src="#" alt="star">
-            <img src="#" alt="star">
-            <img src="#" alt="star">
+            <img src="картинки/звёздочка.svg" alt="star">
+            <img src="картинки/звёздочка.svg" alt="star">
+            <img src="картинки/звёздочка.svg" alt="star">
             </section>
             <section class="fith_hotel">
-                <img src="#" alt="ноычные_горы">
+                <img src="картинки/ночные горы.jpg" alt="ноычные_горы">
                 <h2>GreenTree Inn</h2>
                 <h3>Гостиница</h3>
                 <h3>от 1500р</h3>
                 <button type="submit">Подробнее</button>
                 <button type="submit">В избранное</button>
                 <button type="button">Рейтинг:5,0</button>
-                <img src="#" alt="star">
-                <img src="#" alt="star">
+                <img src="картинки/звёздочка.svg" alt="star">
+                <img src="картинки/звёздочка.svg" alt="star">
                 </section>
                 <section class="Add">
                     <h2>Подпишитесь на рассылку </h2>
